--- a/index.html
+++ b/index.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chatbot</title>
-</head>
-<body>
-    
-</body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="bg-secondary">
+    <section class="container">
+      <div class="container">
+        <h1
+          class="text-center text-white m-3 fw-bold border-bottom border-top border-danger border-4"
+        >
+          The Amazing Trivia Website!!!
+        </h1>
+        <p class="text-center text-white border-bottom pb-4">
+          Unlimited Trivia, at your fingertips! Simply generate a trivia
+          question based on a topic of your choosing, and see what appears! Or
+          you can generate random questions, answers guaranteed!
+        </p>
+        <p class="text-center text-white opacity-25 pb-3 fst-italic small">
+          Warning: Gillis inc. is not liable for confusion, memory loss,
+          unrelated questions, death, dismemberment, child endangerment, loss of
+          motor functions, or sudden desire for lemons.
+        </p>
+      </div>
+    </section>
+    <section class="border border-black m-4 rounded-5 border-3">
+      <div class="conatiner m-3">
+        <h5 class="text-center text-white">Random Trivia Question</h5>
+        <p id="triviaQuestion" class="text-center text-white-50 border">
+          Question generating... Consider pushing any suspicious buttons!
+        </p>
+        <button
+          id="buttonQuestion"
+          class="btn btn-success d-grid mx-auto col-3"
+        >
+          Generate New Trivia!
+        </button>
+      </div>
+    </section>
+    <section class="conatiner border-black m-4 rounded-5 border border-3">
+      <div>
+        <h5 class="m-2 text-center text-white">
+          And the answer to your question lies here!
+        </h5>
+        <p class="text-center text-white">
+          In this very normal, not suspicious box
+        </p>
+        <p class="small text-center text-white-50">
+          That is totally normal for a trivia website.
+        </p>
+        <p
+          id="triviaAnswer"
+          class="bg-dark text-center fw-bold border border-danger text-danger mx-auto col-6"
+        >
+          Totally Normal Text Box
+        </p>
+        <button id="buttonAnswer" class="m-2 btn btn-dark d-grid mx-auto col-3">
+          Generate answer?
+        </button>
+      </div>
+    </section>
+    <section class="container">
+      <p class="small text-white opacity-25 fst-italic">
+        Please don't grade this lower because of the jokes, I promise the
+        website works.
+      </p>
+    </section>
+    <script src="helpers-full.js"></script>
+    <script src="secret-variables.js"></script>
+    <script src="chatbot.js"></script>
+  </body>
 </html>
