Finished up to 13, fixed website page.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         <p id="triviaQuestion" class="text-center text-white-50 border">
           Question generating... Consider pushing any suspicious buttons!
         </p>
+        <div class="container">
+          <textarea
+            class="form-control m-3"
+            placeholder="Enter a topic here, or leave blank for a random topic!"
+            name="Trivia Topic"
+            id="triviaTopic"
+          ></textarea>
+        </div>
         <button
           id="buttonQuestion"
           class="btn btn-success d-grid mx-auto col-3"
